syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.bwl.bwfla.emucomp.grpc";
option java_outer_classname = "SessionInterface";

package emucomp;

service SessionService {
  rpc CreateSession(SessionRequest) returns (SessionResponse) {}
}

message SessionRequest {
}

message SessionResponse {
  string sessionId = 1;
}
